[build-system]
requires = ["setuptools>=70.3.0,<81.0.0", "setuptools-scm>=8.0.4,<10.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-browser-sniffer"
authors = [{ name = "Bekbolot", email = "bekbolot.hbai@gmail.com" }]
description = "Private internal package for the ABS automatic browser sniffer challenge."
readme = "README.md"
requires-python = ">=3.10,<4.0"
keywords = [
    "auto_browser_sniffer",
    "browser",
    "sniffer",
    "challenge",
    "automation",
]
license-files = ["LICENSE*"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dynamic = ["version", "dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
version = { attr = "auto_browser_sniffer.__version__.__version__" }
dependencies = { file = "./requirements.txt" }

optional-dependencies = {}

[tool.setuptools.dynamic.optional-dependencies]
test = { file = ["./requirements/requirements.test.txt"] }
build = { file = ["./requirements/requirements.build.txt"] }
docs = { file = ["./requirements/requirements.docs.txt"] }
dev = { file = [
    "./requirements/requirements.test.txt",
    "./requirements/requirements.build.txt",
    "./requirements/requirements.docs.txt",
    "./requirements/requirements.dev.txt",
] }

[project.urls]
Homepage = "https://github.com/<org>/challenge.auto_browser_sniffer"
Repository = "https://github.com/<org>/challenge.auto_browser_sniffer.git"
Issues = "https://github.com/<org>/challenge.auto_browser_sniffer/issues"
Changelog = "https://github.com/<org>/challenge.auto_browser_sniffer/releases"
