[build-system]
requires = ["setuptools>=70.3.0,<81.0.0", "setuptools-scm>=8.0.4,<10.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-browser-sniffer"
authors = [{ name = "Bekbolot" }]
description = "Private internal package for the ABS automatic browser sniffer challenge."
readme = "README.md"
requires-python = ">=3.10,<4.0"
keywords = [
    "auto_browser_sniffer",
    "browser",
    "sniffer",
    "challenge",
    "automation",
]
license-files = ["LICENSE*"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dynamic = ["dependencies", "optional-dependencies"]
version = "1.0.0"

[tool.setuptools.dynamic]
dependencies = { file = "./requirements.txt" }


[tool.setuptools.dynamic.optional-dependencies]
test = { file = ["./requirements/requirements.test.txt"] }
build = { file = ["./requirements/requirements.build.txt"] }
docs = { file = ["./requirements/requirements.docs.txt"] }
dev = { file = [
    "./requirements/requirements.test.txt",
    "./requirements/requirements.build.txt",
    "./requirements/requirements.docs.txt",
    "./requirements/requirements.dev.txt",
] }

[project.urls]
Homepage = "https://github.com/RedTeamSubnet/challenge.auto_browser_sniffer"
Repository = "https://github.com/RedTeamSubnet/challenge.auto_browser_sniffer.git"
Issues = "https://github.com/RedTeamSubnet/challenge.auto_browser_sniffer/issues"
Changelog = "https://github.com/RedTeamSubnet/challenge.auto_browser_sniffer/releases"
